syntax = "proto3";

package billing;

option java_package = "com.chatbot.core.billing.grpc";
option java_multiple_files = true;

// Billing Service Definition
service BillingService {
    // Billing Account Operations
    rpc ValidateBillingAccount(ValidateBillingAccountRequest) returns (ValidateBillingAccountResponse);
    
    // Subscription Operations
    rpc CheckSubscriptionStatus(CheckSubscriptionStatusRequest) returns (CheckSubscriptionStatusResponse);
    
    // Entitlement Operations
    rpc ValidateFeatureAccess(ValidateFeatureAccessRequest) returns (ValidateFeatureAccessResponse);
    rpc ConsumeUsage(ConsumeUsageRequest) returns (ConsumeUsageResponse);
    rpc GetUsageLimits(GetUsageLimitsRequest) returns (GetUsageLimitsResponse);
    
    // Health Check
    rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// Messages
message ValidateBillingAccountRequest {
    int64 tenant_id = 1;
}

message ValidateBillingAccountResponse {
    bool valid = 1;
    string message = 2;
}

message CheckSubscriptionStatusRequest {
    int64 tenant_id = 1;
}

message CheckSubscriptionStatusResponse {
    bool active = 1;
    string status = 2;
    string plan = 3;
    string ends_at = 4;
    int64 days_until_expiry = 5;
}

message ValidateFeatureAccessRequest {
    int64 tenant_id = 1;
    string feature_code = 2;
}

message ValidateFeatureAccessResponse {
    bool allowed = 1;
    string message = 2;
}

message ConsumeUsageRequest {
    int64 tenant_id = 1;
    string feature_code = 2;
    int64 amount = 3;
}

message ConsumeUsageResponse {
    bool success = 1;
    string message = 2;
}

message GetUsageLimitsRequest {
    int64 tenant_id = 1;
}

message GetUsageLimitsResponse {
    repeated UsageLimitInfo limits = 1;
}

message UsageLimitInfo {
    string feature = 1;
    int64 limit = 2;
    int64 current_usage = 3;
    bool is_unlimited = 4;
    double usage_percentage = 5;
}

message HealthCheckRequest {
    string service = 1;
}

message HealthCheckResponse {
    string status = 1;
    string message = 2;
    string timestamp = 3;
}
