package com.chatbot.core.billing.grpc;

import com.chatbot.core.billing.account.service.BillingAccountService;
import com.chatbot.core.billing.entitlement.service.EntitlementValidationService;
import com.chatbot.core.billing.subscription.service.BillingSubscriptionService;
import lombok.RequiredArgsConstructor;
import lombok.extern.slf4j.Slf4j;
import org.springframework.stereotype.Service;

/**
 * gRPC Service Implementation for Billing Hub
 * Note: gRPC implementation will be completed after proto compilation
 * This is a placeholder implementation
 */
@Service
@RequiredArgsConstructor
@Slf4j
public class BillingServiceGrpcImpl {

    private final BillingAccountService billingAccountService;
    private final BillingSubscriptionService subscriptionService;
    private final EntitlementValidationService validationService;

    // Placeholder methods - will implement gRPC interfaces after proto generation
    public void validateBillingAccount(Object request, Object responseObserver) {
        log.info("gRPC: Validating billing account - placeholder implementation");
    }

    public void checkSubscriptionStatus(Object request, Object responseObserver) {
        log.info("gRPC: Checking subscription status - placeholder implementation");
    }

    public void validateFeatureAccess(Object request, Object responseObserver) {
        log.info("gRPC: Validating feature access - placeholder implementation");
    }

    public void consumeUsage(Object request, Object responseObserver) {
        log.info("gRPC: Consuming usage - placeholder implementation");
    }

    public void getUsageLimits(Object request, Object responseObserver) {
        log.info("gRPC: Getting usage limits - placeholder implementation");
    }

    public void healthCheck(Object request, Object responseObserver) {
        log.info("gRPC: Billing health check - placeholder implementation");
    }
}
